junos.pm: add VMX-SCALE & VMX-BANDWIDTH to license filter - Brad Dreisbach
- #   VMX-BANDWIDTH                         2          100           0    permanent
+ #   VMX-BANDWIDTH                         0          100           0    permanent
  #   VMX-SCALE                             3            3           0    permanent

--- a/lib/junos.pm.in
+++ b/lib/junos.pm.in
@@ -414,7 +414,7 @@ sub ShowSystemLicense {
 	#                                  Licenses     Licenses    Licenses    Expiry
 	#   Feature name                       used    installed      needed
 	#   dynamic-vpn                           1            2           0    permanent
-	if (/^(\s+(?:dynamic|mobile|scale|service|subscriber)-\S+)(\s+)(\d+)(\s+\d+)(.*$)/) {
+	if (/^(\s+(?:VMX|dynamic|mobile|scale|service|subscriber)-\S+)(\s+)(\d+)(\s+\d+)(.*$)/) {
 	    my($a, $sp, $used, $avail, $rem) = ($1, $2, $3, $4, $5);
 	    my($spl, $usedl) = (length($sp), length($used));
 	    my($pcnt, $usage, $usagel);
