--- a/rancid/lib/ios.pm.in
+++ b/rancid/lib/ios.pm.in
@@ -1534,10 +1534,12 @@ REDUX:	tr/\015//d;
 	}
 	# 7200, 3800, 3600, 2600, and 1700 stuff
 	if (/^(Slot)\s+(\d+(\/\d+)?):/
-	    || /^\s+(WIC|VIC|WIC\/VIC) Slot (\d):/
+	    || /^\s+(PVDM|WIC|VIC|WIC\/VIC) Slot (\d):/
 	    || /^(Encryption AIM) (\d):/
 	    || /^(AIM Module in slot:) (\d)/) {
-	    if ($1 eq "WIC") {
+	    if ($1 eq "PVDM") {
+		$WIC = "/$2";
+	    } elsif ($1 eq "WIC") {
 		$WIC = "/$2";
 	    } elsif ($1 eq "VIC") {
 		$WIC = "/$2";
