--- a/lib/junos.pm.in
+++ b/lib/junos.pm.in
@@ -515,6 +515,7 @@ sub ShowVersion {
 	next if (/^system (shutdown message from|going down )/i);
 	next if (/^\{(master|backup)(:\d+)?\}/);
 	/error: abnormal communication termination with / && return(-1);
+	/error: Could not connect to \S+ : No route to host / && return(-1);
 
 	/warning: .* subsystem not running - not needed by configuration/ && next;
 
