--- a/bin/ulogin.in
+++ b/bin/ulogin.in
@@ -24,7 +24,7 @@ set send_human {.2 .1 .4 .2 1}
 # returns: 0 on success, 1 on failure
 proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile } {
     global spawn_id in_proc do_command do_script passphrase
-    global prompt u_prompt p_prompt e_prompt sshcmd
+    global prompt u_prompt p_prompt e_prompt sshcmd telnetcmd
     set in_proc 1
 
     # try each of the connection methods in $cmethod until one is successful
@@ -35,12 +35,16 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 	if [string match "telnet*" $prog] {
 	    if {"$port" == ""} {
 		if { $do_command || $do_script } {
-		    set retval [ catch {spawn hpuifilter -- telnet $router} reason ]
+		    set retval [ catch {eval spawn [split "hpuifilter -- $telnetcmd $router"]} reason ]
 		} else {
-		    set retval [ catch {spawn telnet $router} reason ]
+		    set retval [ catch {eval spawn [split "$telnetcmd $router"]} reason ]
 		}
 	    } else {
-		set retval [ catch {spawn hpuifilter -- telnet $router $port} reason ]
+		if { $do_command || $do_script } {
+		    set retval [ catch {eval spawn [split "hpuifilter -- $telnetcmd $router $port"]} reason ]
+		} else {
+		    set retval [ catch {eval spawn [split "$telnetcmd $router $port"]} reason ]
+		}
 	    }
 	    if { $retval } {
 		send_user "\nError: telnet failed: $reason\n"
@@ -459,6 +463,13 @@ foreach router [lrange $argv $i end] {
     # Figure out the SSH executable name
     set sshcmd [join [lindex [find sshcmd $router] 0] ""]
     if { "$sshcmd" == "" } { set sshcmd {ssh} }
+
+    # Figure out the telnet executable name
+    set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
+    if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
+
+    # if [-mM], skip do not login
+    if { $do_cloginrcdbg > 0 } { continue; }
 
     # Adjust our path to find hpuifilter
     set hpf_path ""
