--- a/bin/anlogin.in
+++ b/bin/anlogin.in
@@ -277,7 +277,8 @@ proc source_password_file { password_file } {
 # returns: 0 on success, 1 on failure, -1 if rsh was used successfully
 proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile } {
     global command spawn_id in_proc do_command do_script platform passphrase
-    global prompt prompt_match u_prompt p_prompt e_prompt sshcmd spawnopts
+    global prompt prompt_match u_prompt p_prompt e_prompt sshcmd telnetcmd
+    global spawnopts
     set in_proc 1
     set uprompt_seen 0
 
@@ -288,11 +289,10 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 	if [string match "telnet*" $prog] {
 	    regexp {telnet(:([^[:space:]]+))*} $prog methcmd suffix port
 	    if {"$port" == ""} {
-		set cmd "telnet $router"
+		set cmd "$telnetcmd $router"
 	    } else {
-		set cmd "telnet $router $port"
+		set cmd "$telnetcmd $router $port"
 	    }
-	    #set retval [catch {[join $cmd " "]} reason]
 	    set retval [catch {eval spawn $spawnopts [split $cmd { }]} reason]
 	    if { $retval } {
 		send_user "\nError: telnet failed: $reason\n"
@@ -716,6 +716,14 @@ foreach router [lrange $argv $i end] {
     # Figure out the SSH executable name
     set sshcmd [join [lindex [find sshcmd $router] 0] ""]
     if { "$sshcmd" == "" } { set sshcmd {ssh} }
+
+    # Figure out the telnet executable name
+    set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
+    if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
+
+# XXX need to import login_top.
+#    # if [-mM], skip do not login
+#    if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
     if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype $identfile]} {
