--- a/bin/jlogin.in
+++ b/bin/jlogin.in
@@ -19,7 +19,7 @@ set send_human {.2 .1 .4 .2 1}
 # returns: 0 on success, 1 on failure
 proc login { router user passwd cmethod cyphertype identfile} {
     global spawn_id in_proc do_command do_script passphrase prompt
-    global sshcmd
+    global sshcmd telnetcmd
     set in_proc 1
 
     # try each of the connection methods in $cmethod until one is successful
@@ -29,9 +29,9 @@ proc login { router user passwd cmethod cyphertype identfile} {
 	if [string match "telnet*" $prog] {
 	    regexp {telnet(:([^[:space:]]+))*} $prog command suffix port
 	    if {"$port" == ""} {
-		set retval [ catch {spawn telnet $router} reason ]
+		set retval [ catch {eval spawn [split "$telnetcmd $router"]} reason ]
 	    } else {
-		set retval [ catch {spawn telnet $router $port} reason ]
+		set retval [ catch {eval spawn [split "$telnetcmd $router $port"]} reason ]
 	    }
 	    if { $retval } {
 		send_user "\nError: telnet failed: $reason\n"
@@ -299,6 +299,10 @@ foreach router [lrange $argv $i end] {
     # Figure out the SSH executable name
     set sshcmd [join [lindex [find sshcmd $router] 0] ""]
     if { "$sshcmd" == "" } { set sshcmd {ssh} }
+
+    # Figure out the telnet executable name
+    set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
+    if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
 
     # if [-mM], skip do not login
     if { $do_cloginrcdbg > 0 } { continue; }
