--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -228,6 +228,7 @@ SVN = @SVN@
 SVN_FSTYPE = @SVN_FSTYPE@
 TAR = @TAR@
 TELNET = @TELNET@
+TELNET_CMD = @TELNET_CMD@
 TOUCH = @TOUCH@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
@@ -273,11 +274,12 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
-man_gen_MANS = lg.conf.5 rancid.3 rancid.conf.5 rancid.types.conf.5 lg_intro.1
+man_gen_MANS = cloginrc.5 lg.conf.5 rancid.3 rancid.conf.5 \
+		rancid.types.conf.5 lg_intro.1
+
 man_nogen_MANS = agmrancid.1 alogin.1 anlogin.1 anrancid.1 \
 		arancid.1 arrancid.1 avologin.1 avorancid.1 blogin.1 brancid.1 \
-		cat5rancid.1 clogin.1 cloginrc.5 control_rancid.1 csblogin.1 \
-		cssrancid.1 \
+		cat5rancid.1 clogin.1 control_rancid.1 csblogin.1 cssrancid.1 \
 		dllogin.1 \
 		elogin.1 erancid.1 f5rancid.1 f10rancid.1 flogin.1 fnlogin.1 \
 		fnrancid.1 hlogin.1 hrancid.1 htlogin.1 \
@@ -313,7 +315,8 @@ auto_edit = sed \
 	-e 's,@sysconfdir\@,$(sysconfdir),g' \
 	-e 's,@pkgdatadir\@,$(pkgdatadir),g' \
 	-e 's,@ADMINMAILPLUS\@,$(ADMINMAILPLUS),g' \
-	-e 's,@MAILPLUS\@,$(MAILPLUS),g'
+	-e 's,@MAILPLUS\@,$(MAILPLUS),g' \
+	-e 's,@TELNET_CMD\@,$(TELNET_CMD),g'
 
 all: all-am
 
@@ -644,6 +647,11 @@ htmls: $(htmls_gen_MANS)
 $(htmls_gen_MANS): $(htmls_MANS)
 	m=`echo $@ | sed -e 's/\.[^.]*$$//'`; \
 	groff -mandoc -Thtml < $$m > $@
+
+cloginrc.5: Makefile $(srcdir)/cloginrc.5.in
+	rm -f cloginrc.5 cloginrc.5.tmp; \
+	$(auto_edit) $(srcdir)/cloginrc.5.in >cloginrc.5.tmp; \
+	mv cloginrc.5.tmp cloginrc.5
 
 lg.conf.5: Makefile $(srcdir)/lg.conf.5.in
 	rm -f lg.conf.5 lg.conf.5.tmp; \
