--- a/bin/blogin.in
+++ b/bin/blogin.in
@@ -14,6 +14,8 @@
 # The "bcc>" prompt changes to "box#", not "bcc#" after the config command.
 #
 
+# XXX need to import login_top.
+
 # Usage line
 set usage "Usage: $argv0 \[-dSV\] \[-autoenable\] \[-noenable\] \[-c command\] \
 \[-Evar=x\] \[-e enable-password\] \[-f cloginrc-file\] \[-p user-password\] \
@@ -40,6 +42,8 @@ set do_passwd 1
 set do_enapasswd 0
 # Save config, if prompted
 set do_saveconfig 0
+# cloginrc debugging knob
+set do_cloginrcdbg 0
 # Sometimes routers take awhile to answer (the default is 10 sec)
 set timeoutdflt 45
 # Some CLIs having problems if we write too fast (Extreme, PIX, Cat)
@@ -613,9 +617,8 @@ foreach router [lrange $argv $i end] {
     set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
     if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
 
-# XXX need to import login_top.
-#    # if [-mM], skip do not login
-#    if { $do_cloginrcdbg > 0 } { continue; }
+    # if [-mM], skip do not login
+    if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
     if {[login $router $ruser $userpswd $passwd $enapasswd $prompt $cmethod $cyphertype]} {
