--- a/bin/wlogin.in
+++ b/bin/wlogin.in
@@ -17,6 +17,8 @@
 # The default username password is the same as the vty password.
 #
 
+# XXX need to import login_top.
+
 # Usage line
 set usage "Usage: $argv0 \[-dSV\] \[-autoenable\] \[-noenable\] \[-c command\] \
 \[-Evar=x\] \[-e enable-password\] \[-f cloginrc-file\] \[-p user-password\] \
@@ -41,6 +43,10 @@ set avautoenable 0
 # tracks if we receive them on the command line.
 set do_passwd 1
 set do_enapasswd 1
+# Save config, if prompted
+set do_saveconfig 0
+# cloginrc debugging knob
+set do_cloginrcdbg 0
 # Sometimes routers take awhile to answer (the default is 10 sec)
 set timeoutdflt 10
 # Some CLIs having problems if we write too fast (Extreme, PIX, Cat)
@@ -815,9 +821,8 @@ foreach router [lrange $argv $i end] {
     set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
     if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
 
-# XXX need to import login_top.
-#    # if [-mM], skip do not login
-#    if { $do_cloginrcdbg > 0 } { continue; }
+    # if [-mM], skip do not login
+    if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
     if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype]} {
